environments/dev/patches/ingress-lms.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - dev.learn.alecloud.site
      secretName: lms-tls-dev
  rules:
    - host: dev.learn.alecloud.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lms
                port:
                  number: 8000
